<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/meals_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="30dp"
        android:entries="@array/foods_array"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/price"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="@string/quantity"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/quantity"
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:max="10"
            android:progress="1"
            android:scaleX="1"
            android:scaleY="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/tips"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tip_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/_10"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/tip_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/tip_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:gravity="center"
            android:autofillHints="Total Price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/confirmLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/confirm_your_order"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/order_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:onClick="order"
        android:text="@string/order_food" />


</LinearLayout>